Delete unnecessary stuff

--- a/hacktues/templates/base.html
+++ b/hacktues/templates/base.html
@@ -12,34 +12,18 @@
 </head>
 
 <body>
-    <!--<header class="teal lighten-5 z-depth-2">
-        <a href="{% url 'main-index' %}"><image width="12%" height="6%" id="logo" src="{%static 'main/logo.png'%}"></image></a>
-        <ul>
-            <li><a>Вход</a></li>
-            <li><a>Изход</a></li>
-        </ul>
-    </header>-->
     <nav class="teal lighten-5 z-depth-2">
         <div class="nav-wrapper">
-<<<<<<< HEAD
-            <a href="{% url 'main-index'%}" class="brand-logo">
-                <img src="{%static 'main/logo.png'%}" style="width: 130px;">
-            </a>
+            <a href="{% url 'main-index'%}" class="brand-logo"><img src="{%static 'main/logo.png'%}"
+                    style="width: 130px;"></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 {% if request.user.is_authenticated %}
-                <li><a class="blue-text" href="{% url 'account_logout'%}">Излез</a></li>
-                <li><a class="blue-text" href="{% url 'main-user-profile'%}">Профил</a></li>
+                <li><a class="blue-text" href="{% url 'account_logout' %}">Излез</a></li>
+                <li><a class="blue-text" href="{% url 'main-user-profile' %}">{{user.first_name}}
+                        {{user.last_name}}</a></li>
                 {% else %}
-=======
-          <a href="{% url 'main-index'%}" class="brand-logo"><img src="{%static 'main/logo.png'%}"></a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            {% if request.user.is_authenticated %}
-                <li><a class="blue-text" href="{% url 'account_logout'%}">Излез</a></li>
-                <li><a class="blue-text" href="{% url 'main-volunteer_profile'%}">{{user.first_name}} {{user.last_name}}</a></li>
-            {% else %}
->>>>>>> 6452eccab8e684119055e27ddaf2beebcbf8ae24
-                <li><a class="blue-text" href="{% url 'account_login'%}">Влез</a></li>
-                <li><a class="blue-text" href="{% url 'account_signup'%}">Регистрирай се</a></li>
+                <li><a class="blue-text" href="{% url 'account_login' %}">Влез</a></li>
+                <li><a class="blue-text" href="{% url 'account_signup' %}">Регистрирай се</a></li>
                 {% endif %}
             </ul>
         </div>
