--- a/hacktues/main/templates/main/choice.html
+++ b/hacktues/main/templates/main/choice.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="row">
     <div class="col s6 light-blue darken-2 z-depth-5 fullPage valign-wrapper center-align">
-        <a class="white-text center-align" href="{% url 'main-volunteer_profile'%}">
+        <a class="white-text center-align" href="{% url 'main-user-profile' %}">
             <h1>ДОБРОВОЛЕЦ</h1>
         </a>
     </div>
