Add last working edition for backup

--- a/hacktues/main/templates/main/choice.html
+++ b/hacktues/main/templates/main/choice.html
@@ -7,7 +7,7 @@
         </a>
     </div>
     <div class="col s6 light-blue darken-1 valign-wrapper center-align fullPage">
-        <form>
+        <form action="{%url 'main-room_user'%}">
             <label for="buildingCode"><a class="white-text">
                     <h1>УЧАСТНИК</h1>
                 </a></label></br>
