--- a/hacktues/main/templates/main/create_room.html
+++ b/hacktues/main/templates/main/create_room.html
@@ -8,7 +8,7 @@
         <form action="{% url 'main-create-room' %}" method="POST">
             {% csrf_token %}
             {{ form }}
-            <button type="submit">Submit</button>
+            <button type="submit">Изпрати</button>
         </form>
     </div>
 </div>
