--- a/hacktues/main/templates/main/event_detail.html
+++ b/hacktues/main/templates/main/event_detail.html
@@ -1,26 +1,22 @@
 {% extends 'base.html'%}
-{%block content%}
-    <div class="container">
-        <div class="row">
-            <div class="col s6 fullPage light-blue darken-2 white-text">
-                <h3>{{event.title}}</h3>
-                <p>by: {{event.author}}</p>
-                <p class="grey-text">{{event.date_posted}}</p>
-                <p>{{event.content}}</p>
-            
-            </div>
-            <div class="col s6 fullPage light-blue darken-1 white-text">
-                <h2>Списъци:</h2>
-                {%for list in lists %}
-                    <h4 class="teal-text text-lighten-2">{{list.author}}</h4>
-                    <ul class="collection">
-                    {%for item in list.items%}
-                        <li class="collection-item blue-text">{{item}}</li>
-                    {%endfor%}
-                    </ul>
-                    </br>
-                {%endfor%}
-            </div>
-        </div>>
+{% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col s6 fullPage light-blue darken-2 white-text">
+            <p class="grey-text">{{ event.creation_date }}</p>
+            <p>{{ event.event }}</p>
+
+        </div>
+        <div class="col s6 fullPage light-blue darken-1 white-text">
+            <h2>Списъци:</h2>
+            {% for list in lists %}
+            <h4 class="teal-text text-lighten-2">{{ list.user }}</h4>
+            <ul class="collection">
+                {{ list.content }}
+            </ul>
+            </br>
+            {%endfor%}
+        </div>
     </div>>
-{%endblock content%}
+</div>>
+{% endblock content %}
